# simpleICP

./: .gitignore
rust/: .gitignore  Cargo.toml
rust/src/: corrpts.rs  main.rs  nearest_neighbor.rs  permutation.rs  point_selection.rs  pointcloud.rs  rigid_body_transformation.rs
