[package]
name = "simpleicp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kd-tree = "0.5.0"
typenum = "1.16.0"
ndarray = '0.15.2'
ndarray-stats = "0.5.1"
linfa-linalg = "0.1.0"
assert_float_eq="1.1.3"
ordered-float = "3.4.0"
